--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .env
 node_modules/
 node_modules/.cache/
+dist/
+build/
+.vscode/
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+coverage/
+.idea/
+*.log
+*.tsbuildinfo
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
